2009-01-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Dialog/PodcastFeedPropertiesDialog.cs:
	Add ability to edit podcasts' names in their properties dialog

2009-01-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Clients/Nereid/Nereid/PlayerInterface.cs: Patch from
	Christoph Burgdorf making it so you have to actually click on the status
	bar text to change it - clicking on the bar but not on the text no longer
	changes it (BGO #568891)

2009-01-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.FileSystemQueue/Banshee.FileSystemQueue/FileSystemQueueSource.cs:
	Set CanDeleteTracks to false until we actually implement DeleteTrack.

2009-01-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.FileSystemQueue/Banshee.FileSystemQueue/FileSystemQueueSource.cs:
	Fix crash on delete from FSQ (BNC #467377)

2009-01-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Data.Sqlite/HyenaSqliteArrayDataReader.cs:
	Convert ArrayList to List<T>.

2009-01-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	* src/Core/Banshee.Services/Banshee.Services.csproj:
	* src/Core/Banshee.Services/Banshee.Database/QueuedSqliteDatabase.cs:
	* src/Libraries/Hyena/Makefile.am:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteUtils.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/HyenaSqliteArrayDataReader.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/HyenaSqliteCommand.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/HyenaSqliteConnection.cs:
	* docs/Hyena/en/Hyena.Data.Sqlite/ExecutingEventArgs.xml:
	* build/pkg-config/banshee-1-hyena.pc.in:
	* build/build.environment.mk:
	* configure.ac: Patch from John Millikin transitioning us from
	Mono.Data.SqliteClient to Mono.Data.Sqlite (BGO #568787).  He solved the
	threading issue I found when I tried about a year ago; SqliteClient read